doc/static/code/FirstAgent_WinQt/dependencies/headers/ingescape/ingescape.h

#define PUBLIC __declspec(dllexport)
#define PUBLIC __declspec(dllimport)
#define PUBLIC
//////////////////////////////////////////////////
//initialization and control

//start & stop the agent
PUBLIC int igs_startWithDevice(const char *networkDevice, unsigned int port);
typedef enum {
    IGS_INTEGER_T = 1,  ///< integer value type
    IGS_DOUBLE_T,       ///< double value type
    IGS_STRING_T,       ///< string value type
    IGS_BOOL_T,         ///< bool value type
    IGS_IMPULSION_T,    ///< impulsion value type
    IGS_DATA_T,         ///< data value type
    IGS_UNKNOWN_T       ///< for unknown parsed types
} iopType_t;
//////////////////////////////////////////////////
//Definitions

//load / set / get definition
PUBLIC int igs_loadDefinition (const char* json_str);
PUBLIC int igs_loadDefinitionFromPath (const char* file_path);
PUBLIC int igs_clearDefinition(void); //clears definition data for the agent
PUBLIC char* igs_getDefinition(void); //returns json string, must be freed by caller
PUBLIC char *igs_getDefinitionName(void); //returned char* must be freed by caller
PUBLIC char *igs_getDefinitionDescription(void); //returned char* must be freed by caller
PUBLIC char *igs_getDefinitionVersion(void); //returned char* must be freed by caller
PUBLIC int igs_setDefinitionName(const char *name);
PUBLIC int igs_setDefinitionDescription(const char *description);
PUBLIC int igs_setDefinitionVersion(const char *version);
//edit the definition using the API
PUBLIC int igs_createInput(const char *name, iopType_t value_type, void *value, size_t size);
PUBLIC int igs_createOutput(const char *name, iopType_t type, void *value, size_t size);
PUBLIC int igs_createParameter(const char *name, iopType_t type, void *value, size_t size);
PUBLIC int igs_removeInput(const char *name);
PUBLIC int igs_removeOutput(const char *name);
PUBLIC int igs_removeParameter(const char *name);
//////////////////////////////////////////////////
//mapping

//load / set / get mapping
PUBLIC int igs_loadMapping (const char* json_str);
PUBLIC int igs_loadMappingFromPath (const char* file_path);
PUBLIC int igs_clearMapping(void); //clears mapping data for the agent
PUBLIC char* igs_getMapping(void); //returns json string, must be freed by caller
PUBLIC char *igs_getMappingName(void); //returned char* must be freed by caller
PUBLIC char *igs_getMappingDescription(void); //returned char* must be freed by caller
PUBLIC char *igs_getMappingVersion(void); //returned char* must be freed by caller
//edit mapping using the API
PUBLIC int igs_setMappingName(const char *name);
PUBLIC int igs_setMappingDescription(const char *description);
PUBLIC int igs_setMappingVersion(const char *version);
PUBLIC int igs_getMappingEntriesNumber(void); //number of entries in the mapping output type
PUBLIC unsigned long igs_addMappingEntry(const char *fromOurInput, const char *toAgent, const char *withOutput); //returns mapping id or zero or below if creation failed
PUBLIC int igs_removeMappingEntryWithId(unsigned long theId);
PUBLIC int igs_removeMappingEntryWithName(const char *fromOurInput, const char *toAgent, const char *withOutput);
//////////////////////////////////////////////////
//administration, configuration & utilities

//IngeScape library version
//returns MAJOR*10000 + MINOR*100 + MICRO
//displays MAJOR.MINOR.MICRO in console
PUBLIC int igs_version(void);
//Utility functions to find network adapters with broadcast capabilities
//to be used in igs_startWithDevice
PUBLIC void igs_getNetdevicesList(char ***devices, int *nb);
PUBLIC void igs_freeNetdevicesList(char **devices, int nb);
//Agent command line can be passed here for inclusion in the
//agent's headers and to be used by ingescapeLauncher. If not set,
//command line is initialized with exec path without any parameter.
PUBLIC void igs_setCommandLine(const char *line);
//When mapping agents, it is possible to request the
//mapped agents to send us their current output values
//through a private communication for our proper initialization.
//By default, this behavior is disabled.
PUBLIC void igs_setRequestOutputsFromMappedAgents(bool notify);
PUBLIC bool igs_getRequestOutputsFromMappedAgents(void);
//logs management
PUBLIC void igs_setVerbose(bool verbose); //enable log in console (enabled by default)
PUBLIC bool igs_isVerbose(void);
/* Logs policy
 - fatal : Events that force application termination.
 - error : Events that are fatal to the current operation but not the whole application.
 - warning : Events that can potentially cause application anomalies but that can be recovered automatically (by circumventing or retrying).
 - info : Generally useful information to log (service start/stop, configuration assumptions, etc.).
 - debug : Information that is diagnostically helpful to people more than just developers but useless for system monitoring.
 - trace : Information about parts of functions, for detailed diagnostic only.
 */
typedef enum {
    IGS_LOG_TRACE = 0,
    IGS_LOG_DEBUG,
    IGS_LOG_INFO,
    IGS_LOG_WARN,
    IGS_LOG_ERROR,
    IGS_LOG_FATAL
} igs_logLevel_t;